Pics and tricks
wuuu

--- a/VJP/index.html
+++ b/VJP/index.html
@@ -1,7 +1,45 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Täällä on tyhjää</h1>
-<p>'tyhjää'</p>
-</body>
+    <head>
+        <meta charset "UTF-8" />
+        <meta name="author" content="Meikäläinen" />
+        <meta name="description" content="Ei mitään." />
+        <link rel="shortcut icon" href="" />
+        <title>Täällä on tyhjää </title>
+    </head>
+        <body>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="https://www.instagram.com/markustaskinen/">Portfolio</a></li>
+                    <li><a href="#">Donate</a></li>
+                </ul>
+            </nav>
+            <header>
+                <h1>Täällä on tyhjää</h1>
+                <img src="assets/kuva.jpg" alt="Lol pelkkää tyhjää"/>
+            </header>
+            <section>
+                <article>
+                    <h2>Tyhjääkin tyhjempää</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id pulvinar ipsum. Nunc finibus dolor quis mauris viverra, vitae gravida mi molestie. Fusce eu nisl ut sem commodo dapibus quis quis nulla. Integer viverra justo ac urna luctus mattis. Duis at eleifend turpis. Curabitur auctor nunc quis malesuada luctus. Nunc consectetur, enim vel pellentesque rhoncus, sapien nisi semper felis, nec tempor erat velit a urna. Praesent porttitor tortor libero, ac tempor magna consectetur nec. Aliquam erat volutpat. Nunc ut metus lacus. Morbi sit amet posuere est.
+                    </p>
+                    <img src="assets/kuva2.jpg" width="150%" alt="Lol pelkkää tyhjää"/>
+                    <h2>Lisää tyhjää</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id pulvinar ipsum. Nunc finibus dolor quis mauris viverra, vitae gravida mi molestie. Fusce eu nisl ut sem commodo dapibus quis quis nulla. Integer viverra justo ac urna luctus mattis. Duis at eleifend turpis. Curabitur auctor nunc quis malesuada luctus. Nunc consectetur, enim vel pellentesque rhoncus, sapien nisi semper felis, nec tempor erat velit a urna. Praesent porttitor tortor libero, ac tempor magna consectetur nec. Aliquam erat volutpat. Nunc ut metus lacus. Morbi sit amet posuere est.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wIZwaesevUs" frameborder="0" allowfullscreen></iframe>
+                </article>
+            </section>
+            <aside>
+                <article>
+                    <h3>Tyhjyyttä:</h3>
+                    <li><a href="#" >tyhjä</a></li>
+                    <li>tyhjempi</li>
+                    <li>tyhjin</li>
+                </article>
+            </aside>
+            <footer>
+                <p>Copyright 2017 Meikäläinen</p>
+            </footer>
+        </body>
 </html>
