--- a/VJP/index.html
+++ b/VJP/index.html
@@ -5,26 +5,36 @@
         <meta name="author" content="Meikäläinen" />
         <meta name="description" content="Ei mitään." />
         <link rel="shortcut icon" href="" />
-        <title>Täällä on tyhjää </title>
+        <title>Täällä on tyhjää &#128567;</title>
     </head>
         <body>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#first">Home</a></li>
                     <li><a href="https://www.instagram.com/markustaskinen/">Portfolio</a></li>
-                    <li><a href="#">Donate</a></li>
+                    <li>
+                        <details open>
+                        <summary>Posts</summary>
+                            <ul>
+                                <li><a href="#first">Tyhjääkin tyhjempää</a></li>
+                                <li><a href="#second">Lisää tyhjää</a></li>
+                            </ul>
+                        </details>
+                    </li>
                 </ul>
             </nav>
             <header>
-                <h1>Täällä on tyhjää</h1>
+                <h1>Täällä on tyhjää&#127763;</h1>
                 <img src="assets/kuva.jpg" alt="Lol pelkkää tyhjää"/>
             </header>
             <section>
-                <article>
+                <article id="first">
                     <h2>Tyhjääkin tyhjempää</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id pulvinar ipsum. Nunc finibus dolor quis mauris viverra, vitae gravida mi molestie. Fusce eu nisl ut sem commodo dapibus quis quis nulla. Integer viverra justo ac urna luctus mattis. Duis at eleifend turpis. Curabitur auctor nunc quis malesuada luctus. Nunc consectetur, enim vel pellentesque rhoncus, sapien nisi semper felis, nec tempor erat velit a urna. Praesent porttitor tortor libero, ac tempor magna consectetur nec. Aliquam erat volutpat. Nunc ut metus lacus. Morbi sit amet posuere est.
                     </p>
                     <img src="assets/kuva2.jpg" width="150%" alt="Lol pelkkää tyhjää"/>
+                </article>
+                    <article id="second">
                     <h2>Lisää tyhjää</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id pulvinar ipsum. Nunc finibus dolor quis mauris viverra, vitae gravida mi molestie. Fusce eu nisl ut sem commodo dapibus quis quis nulla. Integer viverra justo ac urna luctus mattis. Duis at eleifend turpis. Curabitur auctor nunc quis malesuada luctus. Nunc consectetur, enim vel pellentesque rhoncus, sapien nisi semper felis, nec tempor erat velit a urna. Praesent porttitor tortor libero, ac tempor magna consectetur nec. Aliquam erat volutpat. Nunc ut metus lacus. Morbi sit amet posuere est.</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/wIZwaesevUs" frameborder="0" allowfullscreen></iframe>
@@ -34,7 +44,7 @@
                 <article>
                     <h3>Tyhjyyttä:</h3>
                     <li><a href="#" >tyhjä</a></li>
-                    <li>tyhjempi</li>
+                    <li><a href="#first" >tyhjempi</a></li>
                     <li>tyhjin</li>
                 </article>
             </aside>
