--- a/VJP/index.html
+++ b/VJP/index.html
@@ -17,7 +17,7 @@
                     <li><a href="https://www.instagram.com/markustaskinen/">Portfolio</a></li>
                     <li>
                         <details open>
-                        <summary>Posts</summary>
+                        <summary>Pots</summary>
                             <ul>
                                 <li><a href="#first">Tyhjääkin tyhjempää</a></li>
                                 <li><a href="#second">Lisää tyhjää</a></li>
