--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset "UTF-8" />
         <meta name="author" content="Meikäläinen" />
         <meta name="description" content="Ei mitään." />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="" />
         <title>Täällä on tyhjää &#128567;</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
