--- a/index.html
+++ b/index.html
@@ -2,50 +2,58 @@
 <html>
     <head>
         <meta charset "UTF-8" />
-        <meta name="author" content="Meikäläinen" />
-        <meta name="description" content="Ei mitään." />
+        <meta name="author" content="Markus Taskinen" />
+        <meta name="description" content="Maalämpö" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="" />
-        <title>Täällä on tyhjää &#128567;</title>
+        <link rel="shortcut icon" href="assets/favicon.jpg" />
+        <title>Maalämpö</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     </head>
         <body>
-            <div class="container">
             <nav class="navigation">
                 <ul>
-                    <li><a href="#first">Home</a></li>
+                    <li><a href="#">Etusivu</a></li>
                     <li><a href="https://www.instagram.com/markustaskinen/">Portfolio</a></li>
-                    <li>
-                        <details open>
-                        <summary>Pots</summary>
-                            <ul>
-                                <li><a href="#first">Tyhjääkin tyhjempää</a></li>
-                                <li><a href="#second">Lisää tyhjää</a></li>
-                            </ul>
-                        </details>
-                    </li>
+                    <li><a href="http://www.sulpu.fi/">Sulpu</a></li>
                 </ul>
             </nav>
             <header>
-                <h1>Täällä on tyhjää&#128009;</h1>
-                <img class="resize" src="assets/kuva.jpg" alt="Lol pelkkää tyhjää"/>
+                <div class="parallax">
+                <h1>Maalämpö on ekologisin vaihtoehto</h1>
+                </div>
             </header>
             <section>
-                <article class="blog-post" id="first">
-                    <h2>Tyhjääkin tyhjempää&#128171;</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id pulvinar ipsum. Nunc finibus dolor quis mauris viverra, vitae gravida mi molestie. Fusce eu nisl ut sem commodo dapibus quis quis nulla. Integer viverra justo ac urna luctus mattis. Duis at eleifend turpis. Curabitur auctor nunc quis malesuada luctus. Nunc consectetur, enim vel pellentesque rhoncus, sapien nisi semper felis, nec tempor erat velit a urna. Praesent porttitor tortor libero, ac tempor magna consectetur nec. Aliquam erat volutpat. Nunc ut metus lacus. Morbi sit amet posuere est.
+                <article>
+                    <h2>Kampanja</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue urna vitae mauris interdum tincidunt. In malesuada, arcu facilisis porta faucibus, mi dui euismod diam, sit amet rutrum lacus lacus eu elit. Donec ullamcorper ut ligula sit amet ullamcorper. Quisque eu accumsan est. Suspendisse sit amet sem vulputate, sollicitudin felis nec, mattis enim. Suspendisse tempor, mauris sagittis dictum mattis, lacus arcu fringilla massa, ut vestibulum ante odio vitae magna. Nunc fringilla tortor quis posuere interdum. Duis nisl urna, accumsan in libero id, sollicitudin pretium est. Proin a ligula hendrerit, vulputate tellus vel, bibendum arcu. Duis sit amet lorem tellus. Aenean ultricies in nunc at tempus. Donec finibus porttitor diam vitae faucibus. Aenean malesuada risus rutrum nibh finibus lobortis. Quisque at placerat lectus. Donec hendrerit lobortis libero nec placerat.<br>
+
+    <br>Phasellus tempus, mi eu consequat tempus, eros dui sollicitudin sem, eleifend pretium est tortor sit amet arcu. Morbi in vestibulum nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin sed tempus mauris, eu porta justo. Donec vestibulum sapien sit amet nisl tincidunt viverra. Nullam quis sollicitudin felis. Fusce dapibus vel tortor nec imperdiet. Nullam vitae consequat nisl. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam erat volutpat. Donec condimentum ultricies laoreet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br>
+
+<br>Morbi sed risus quam. Donec eleifend condimentum sem a elementum. Phasellus sagittis arcu sit amet nisi placerat, malesuada consequat ligula varius. Proin sagittis, magna a euismod pharetra, leo nisl tempor nulla, et sollicitudin erat lacus vitae sapien. Suspendisse posuere enim quis venenatis cursus. Donec gravida et tortor et varius. Suspendisse eleifend ullamcorper porttitor. Donec varius nisi id aliquet cursus. Vestibulum tempus nibh ut urna ultrices posuere.
                     </p>
-                    <img class="resize" src="assets/kuva2.jpg" width="150%" alt="Lol pelkkää tyhjää"/>
-                </article>
-                <article class="blog-post" id="second">
-                    <h2>Lisää tyhjää&#127763;</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id pulvinar ipsum. Nunc finibus dolor quis mauris viverra, vitae gravida mi molestie. Fusce eu nisl ut sem commodo dapibus quis quis nulla. Integer viverra justo ac urna luctus mattis. Duis at eleifend turpis. Curabitur auctor nunc quis malesuada luctus. Nunc consectetur, enim vel pellentesque rhoncus, sapien nisi semper felis, nec tempor erat velit a urna. Praesent porttitor tortor libero, ac tempor magna consectetur nec. Aliquam erat volutpat. Nunc ut metus lacus. Morbi sit amet posuere est.</p>
-                    <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wIZwaesevUs" frameborder="0" allowfullscreen></iframe>
-                    </div>
                 </article>
             </section>
+            <div class="info1">
+                <p>Talonyhtiöille<br><a href="#">Lisää tietoa tästä</a></p>
+            </div>
+            <div class="info2">
+            <p>Omakotitaloille<br><a href="#">Lisää tietoa tästä</a></p>
+            </div>
+            <div class="info">
+                <div class="back"><img src="assets/talo2.jpg" width="100%" alt="Hups! Kuvaa ei voitu ladata."/>
+                </div>
+                <div class="front">
+                <h3><a href="#">Talonyhtiöille</a></h3>
+                </div>
+            </div>
+            <div class="info">
+                <div class="back"><img src="assets/talo2.jpg" width="33%" alt="Hups! Kuvaa ei voitu ladata."/>
+                </div>
+                <div class="front">
+                <h3><a href="#">Talonyhtiöille</a></h3>
+                </div>
+            </div>
             <aside>
                 <article>
                     <h3>Tyhjyyttä:</h3>
@@ -57,6 +65,5 @@
             <footer>
                 <p>Copyright 2017 Meikäläinen</p>
             </footer>
-            </div>
         </body>
 </html>
