--- a/index.html
+++ b/index.html
@@ -34,34 +34,17 @@
                     </p>
                 </article>
             </section>
-            <div class="info1">
-                <p>Talonyhtiöille<br><a href="#">Lisää tietoa tästä</a></p>
-            </div>
-            <div class="info2">
-            <p>Omakotitaloille<br><a href="#">Lisää tietoa tästä</a></p>
-            </div>
             <div class="info">
-                <div class="back"><img src="assets/talo2.jpg" width="100%" alt="Hups! Kuvaa ei voitu ladata."/>
+                <div class="info1">
+                    <p>Talonyhtiöille<br><a href="#">Lisää tietoa tästä</a></p>
                 </div>
-                <div class="front">
-                <h3><a href="#">Talonyhtiöille</a></h3>
+                <div class="info2">
+                    <p>Omakotitaloon<br><a href="#">Lisää tietoa tästä</a></p>
                 </div>
-            </div>
-            <div class="info">
-                <div class="back"><img src="assets/talo2.jpg" width="33%" alt="Hups! Kuvaa ei voitu ladata."/>
-                </div>
-                <div class="front">
-                <h3><a href="#">Talonyhtiöille</a></h3>
+                <div class="info3">
+                    <p>Rakennuttajalle<br><a href="#">Lisää tietoa tästä</a></p>
                 </div>
             </div>
-            <aside>
-                <article>
-                    <h3>Tyhjyyttä:</h3>
-                    <li><a href="#" >tyhjä</a></li>
-                    <li><a href="#first" >tyhjempi</a></li>
-                    <li>tyhjin</li>
-                </article>
-            </aside>
             <footer>
                 <p>Copyright 2017 Meikäläinen</p>
             </footer>
