--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="#">Etusivu</a></li>
-                    <li><a href="https://www.instagram.com/markustaskinen/">Portfolio</a></li>
-                    <li><a href="http://www.sulpu.fi/">Sulpu</a></li>
+                    <li><a href="#info">Tietoa</a></li>
+                    <li><a href="#contact">Ota yhteyttä</a></li>
                 </ul>
             </nav>
             <header>
@@ -34,9 +34,9 @@
                     </p>
                 </article>
             </section>
-            <div class="info">
+            <div class="info" id="info">
                 <div class="info1">
-                    <p>Talonyhtiöille<br><a href="#">Lisää tietoa tästä</a></p>
+                    <p>Talonyhtiöön<br><a href="#">Lisää tietoa tästä</a></p>
                 </div>
                 <div class="info2">
                     <p>Omakotitaloon<br><a href="#">Lisää tietoa tästä</a></p>
@@ -45,8 +45,15 @@
                     <p>Rakennuttajalle<br><a href="#">Lisää tietoa tästä</a></p>
                 </div>
             </div>
+            <div class="contact" id="contact">
+                <h2>Ota yhteyttä</h2>
+            </div>
             <footer>
-                <p>Copyright 2017 Meikäläinen</p>
+                <h3>Suomen lämpöpumppuyhdistys</h3>
+                <p>Pitkämäenkatu 13<br>20250 Turku<br>+358 50 500 2751</p>
+                <a href="http://www.sulpu.fi/">
+                <img id="logo" src="assets/sulpu-logo.png" alt="Hups!"/></a>
+                <p id="copy">&copy Markus Taskinen 2017</p>
             </footer>
         </body>
 </html>
