--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <title>Maalämpö</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script>
+        <script src="https://use.fontawesome.com/68627405a7.js"></script>
+        <script src="slideshow.js" type="text/javascript"></script>
     </head>
         <body>
             <nav class="navigation">
@@ -34,7 +37,22 @@
                     </p>
                 </article>
             </section>
-            <div class="info" id="info">
+            <div class="slideshow">
+                <div id="fade">
+                    <h2 id="topic">Otsikko</h2>
+                    <p id="content">sisältö</p>
+                    <b id="date">päivämäärä</b>
+                </div>
+                <div class="buttons">
+                    <a class="prev" onclick="prevSlide()">&#10094;</a>
+                    <a class="pause" onclick="togglePlay()">
+                        <i class="fa fa-pause" id="pauseicon" aria-hidden="true"></i>
+                        <i class="fa fa-play" id="playicon" aria-hidden="true"></i>
+                    </a>
+                    <a class="next" onclick="nextSlide()">&#10095;</a>
+                </div>
+            </div>
+            <div class="info" id="info"> 
                 <div class="info1">
                     <p>Talonyhtiöön<br><a href="#">Lisää tietoa tästä</a></p>
                 </div>
