--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                     </p>
                 </article>
             </section>
+            <div class="media">
+                <video id="media" controls poster="assets/poster1.png">
+                    <source src="assets/maalampo.mp4" type="video/mp4" />
+                    <source src="assets/maalampo.ogv" type="video/ogg" />
+                    <source src="assets/maalampo.webm" type="video/webm" />
+                </video>
+            </div>
             <div class="slideshow">
                 <div id="fade">
                     <h2 id="topic">Otsikko</h2>
