--- a/animation.html
+++ b/animation.html
@@ -15,6 +15,7 @@
         <div class="buttons">
             <button onclick="changeSpeed(2)">speed up</button>
             <button onclick="changeSpeed(-2)">slow down</button>
+            <button onclick="reset()">reset</button>
         </div>
     </body>
 </html>
