--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script>
         <script src="https://use.fontawesome.com/68627405a7.js"></script>
         <script src="slideshow.js" type="text/javascript"></script>
+        <script src="phaser.js"></script>
+        <script src="game_animation.js"></script>
     </head>
         <body>
             <nav class="navigation">
@@ -19,6 +21,7 @@
                     <li><a href="#">Etusivu</a></li>
                     <li><a href="#info">Tietoa</a></li>
                     <li><a href="#contact">Ota yhteyttä</a></li>
+                    <li><a href="#gamediv">Peli</a></li>
                 </ul>
             </nav>
             <header>
@@ -69,6 +72,10 @@
                 <div class="info3">
                     <p>Rakennuttajalle<br><a href="#">Lisää tietoa tästä</a></p>
                 </div>
+            </div>
+            <div class="gamediv" id="gamediv">
+                <h2>Pora Peli</h2>
+            <div class="game" id="game"></div>
             </div>
             <div class="contact" id="contact">
                 <h2>Ota yhteyttä</h2>
