--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
                 </div>
             </div>
             <div class="gamediv" id="gamediv">
-                <h2>Pora Peli</h2>
+                <h2>Porapeli</h2>
             <div class="game" id="game"></div>
+                <p>Helpon vaikeustason musiikki: Vicious Kevin MacLeod (incompetech.com) Licensed under Creative Commons: By Attribution 3.0 License http://creativecommons.org/licenses/by/3.0/<br><br>
+
+Vaikea vaikeustaso, muokattu versio: Exit the Premises Kevin MacLeod (incompetech.com) Licensed under Creative Commons: By Attribution 3.0 License http://creativecommons.org/licenses/by/3.0/</p>
             </div>
             <div class="contact" id="contact">
                 <h2>Ota yhteyttä</h2>
