--- a/index.html
+++ b/index.html
@@ -32,14 +32,22 @@
             <section>
                 <article>
                     <h2>Kampanja</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue urna vitae mauris interdum tincidunt. In malesuada, arcu facilisis porta faucibus, mi dui euismod diam, sit amet rutrum lacus lacus eu elit. Donec ullamcorper ut ligula sit amet ullamcorper. Quisque eu accumsan est. Suspendisse sit amet sem vulputate, sollicitudin felis nec, mattis enim. Suspendisse tempor, mauris sagittis dictum mattis, lacus arcu fringilla massa, ut vestibulum ante odio vitae magna. Nunc fringilla tortor quis posuere interdum. Duis nisl urna, accumsan in libero id, sollicitudin pretium est. Proin a ligula hendrerit, vulputate tellus vel, bibendum arcu. Duis sit amet lorem tellus. Aenean ultricies in nunc at tempus. Donec finibus porttitor diam vitae faucibus. Aenean malesuada risus rutrum nibh finibus lobortis. Quisque at placerat lectus. Donec hendrerit lobortis libero nec placerat.<br>
+                    <p>Maalämpö on maaperän tai veden massaan varastoitunutta lämpöenergiaa. Maaperä sitoo lämpöä, ja talvella maaperä on lämpimämpää kuin ulkoilma. Maalämpöpumpulla lämpöenergiaa voidaan hyödyntää rakennusten, käyttöveden ja sisäilman lämmittämiseen. Maalämpö mahdollistaa myös rakennusten jäähdyttämisen, joka ei vaadi erillistä kaukojäähdytysverkostoa.<br>
 
-    <br>Phasellus tempus, mi eu consequat tempus, eros dui sollicitudin sem, eleifend pretium est tortor sit amet arcu. Morbi in vestibulum nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin sed tempus mauris, eu porta justo. Donec vestibulum sapien sit amet nisl tincidunt viverra. Nullam quis sollicitudin felis. Fusce dapibus vel tortor nec imperdiet. Nullam vitae consequat nisl. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam erat volutpat. Donec condimentum ultricies laoreet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br>
-
-<br>Morbi sed risus quam. Donec eleifend condimentum sem a elementum. Phasellus sagittis arcu sit amet nisi placerat, malesuada consequat ligula varius. Proin sagittis, magna a euismod pharetra, leo nisl tempor nulla, et sollicitudin erat lacus vitae sapien. Suspendisse posuere enim quis venenatis cursus. Donec gravida et tortor et varius. Suspendisse eleifend ullamcorper porttitor. Donec varius nisi id aliquet cursus. Vestibulum tempus nibh ut urna ultrices posuere.
-                    </p>
+<br>Maalämpöpumppujen suosio on ollut viime vuosina jatkuvassa kasvussa. Vuonna 2011, maalämpöpumppuja myytiin Suomessa yli 70 000 kpl. Maalämpöpumppujen suosiota selittää siihen tarvittavan investoinnin kannattavuus. Maalämpöpumpun asennus vaatii yhden ison investoinnin, joka tarjoaa pitkäaikaisesti jopa 20% tuoton. Lämpöpumpun asennus myös nostaa talon tai taloyhtiön arvoa usein enemmän kuin siihen sijoitetun rahan verran. Maalämpö tarjoaa täysin omavaraisen ja ekologisen vaihtoehdon rakennuksen lämmittämiseen.</p>
                 </article>
             </section>
+            <div class="info" id="info"> 
+                <div class="info1">
+                    <p>Talonyhtiöön<br><a href="#">Lisää tietoa tästä</a></p>
+                </div>
+                <div class="info2">
+                    <p>Omakotitaloon<br><a href="#">Lisää tietoa tästä</a></p>
+                </div>
+                <div class="info3">
+                    <p>Rakennuttajalle<br><a href="#">Lisää tietoa tästä</a></p>
+                </div>
+            </div>
             <div class="media">
                 <video id="media" controls poster="assets/poster1.png">
                     <source src="assets/maalampo.mp4" type="video/mp4" />
@@ -60,17 +68,6 @@
                         <i class="fa fa-play" id="playicon" aria-hidden="true"></i>
                     </a>
                     <a class="next" onclick="nextSlide()">&#10095;</a>
-                </div>
-            </div>
-            <div class="info" id="info"> 
-                <div class="info1">
-                    <p>Talonyhtiöön<br><a href="#">Lisää tietoa tästä</a></p>
-                </div>
-                <div class="info2">
-                    <p>Omakotitaloon<br><a href="#">Lisää tietoa tästä</a></p>
-                </div>
-                <div class="info3">
-                    <p>Rakennuttajalle<br><a href="#">Lisää tietoa tästä</a></p>
                 </div>
             </div>
             <div class="gamediv" id="gamediv">
