whole site structure update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Maalämpö" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="assets/favicon.jpg" />
-        <title>Maalämpö</title>
+        <title>Puhdasta energiaa</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script>
@@ -26,34 +26,31 @@
             </nav>
             <header>
                 <div class="parallax">
-                <h1>Maalämpö on ekologisin vaihtoehto</h1>
+                <h1>Puhdasta energiaa jalkojemme alla.</h1>
                 </div>
             </header>
             <section>
                 <article>
-                    <h2>Kampanja</h2>
-                    <p>Maalämpö on maaperän tai veden massaan varastoitunutta lämpöenergiaa. Maaperä sitoo lämpöä, ja talvella maaperä on lämpimämpää kuin ulkoilma. Maalämpöpumpulla lämpöenergiaa voidaan hyödyntää rakennusten, käyttöveden ja sisäilman lämmittämiseen. Maalämpö mahdollistaa myös rakennusten jäähdyttämisen, joka ei vaadi erillistä kaukojäähdytysverkostoa.<br>
+                    <h2>Tiesitkö?</h2>
+                    <p>Energiamuotoja on monenlaisia, mutta maalämpö on yksi edullisimmista ja ekologisimmista tavoista lämmittää kotisi. Tämä täysin päästötön, uusiutuva ja vaivaton ratkaisu pitää kotisi lämpimänä talven kylmimpinäkin päivinä.<br>
+                        
+                        <br>Maalämpö on maaperän tai veden massaan varastoitunutta lämpöenergiaa. Maaperä sitoo lämpöä, ja talvella maaperä on lämpimämpää kuin ulkoilma. Maalämpöpumpulla lämpöenergiaa voidaan hyödyntää rakennusten, käyttöveden ja sisäilman lämmittämiseen. Maalämpö mahdollistaa myös rakennusten jäähdyttämisen, joka ei vaadi erillistä kaukojäähdytysverkostoa.<br>
 
-<br>Maalämpöpumppujen suosio on ollut viime vuosina jatkuvassa kasvussa. Vuonna 2011, maalämpöpumppuja myytiin Suomessa yli 70 000 kpl. Maalämpöpumppujen suosiota selittää siihen tarvittavan investoinnin kannattavuus. Maalämpöpumpun asennus vaatii yhden ison investoinnin, joka tarjoaa pitkäaikaisesti jopa 20% tuoton. Lämpöpumpun asennus myös nostaa talon tai taloyhtiön arvoa usein enemmän kuin siihen sijoitetun rahan verran. Maalämpö tarjoaa täysin omavaraisen ja ekologisen vaihtoehdon rakennuksen lämmittämiseen.</p>
+<br>Maalämpöpumppujen suosio on ollut viime vuosina jatkuvassa kasvussa. Vuonna 2011, maalämpöpumppuja myytiin Suomessa yli 70 000 kpl. Suosiota selittää siihen tarvittavan investoinnin kannattavuus. Maalämpöpumpun asennus vaatii yhden ison investoinnin, joka tarjoaa pitkäaikaisesti jopa 20% tuoton. Lämpöpumpun asennus myös nostaa talon tai taloyhtiön arvoa usein enemmän kuin siihen sijoitetun rahan verran. Maalämpö tarjoaa täysin omavaraisen ja ekologisen vaihtoehdon rakennuksen lämmittämiseen.<br>
+                        
+                    <br>Tältä sivustolta löydät lisätietoa maalämmön mahdollisuuksista ja ominaisuuksista, asuitpa sitten omakotitalossa tai kaupunkiasunnossa. Kokeile myös kuinka syvälle pystyt poraamaan huikeassa maalämpöpelissä tai katso kuinka pääset vauhtiin oman maalämpöratkaisusi touteutuksessa.</p>
                 </article>
             </section>
             <div class="info" id="info"> 
                 <div class="info1">
-                    <p>Talonyhtiöön<br><a href="#">Lisää tietoa tästä</a></p>
+                    <p>Talonyhtiöön<br><a href="taloyhtio.html">Lisää tietoa tästä</a></p>
                 </div>
                 <div class="info2">
-                    <p>Omakotitaloon<br><a href="#">Lisää tietoa tästä</a></p>
+                    <p>Omakotitaloon<br><a href="omakotitalo.html">Lisää tietoa tästä</a></p>
                 </div>
                 <div class="info3">
-                    <p>Rakennuttajalle<br><a href="#">Lisää tietoa tästä</a></p>
+                    <p>Maalämmön muistilista<br><a href="rakennuttajat.html">Lisää tietoa tästä</a></p>
                 </div>
-            </div>
-            <div class="media">
-                <video id="media" controls poster="assets/poster1.png">
-                    <source src="assets/maalampo.mp4" type="video/mp4" />
-                    <source src="assets/maalampo.ogv" type="video/ogg" />
-                    <source src="assets/maalampo.webm" type="video/webm" />
-                </video>
             </div>
             <div class="slideshow">
                 <div id="fade">
@@ -70,8 +67,16 @@
                     <a class="next" onclick="nextSlide()">&#10095;</a>
                 </div>
             </div>
+            <div class="media">
+                <video id="media" controls poster="assets/poster1.png">
+                    <source src="assets/maalampo.mp4" type="video/mp4" />
+                    <source src="assets/maalampo.ogv" type="video/ogg" />
+                    <source src="assets/maalampo.webm" type="video/webm" />
+                </video>
+            </div>
             <div class="gamediv" id="gamediv">
                 <h2>Porapeli</h2>
+                <p>Pelaa nyt mukaansa tempaavaa ja rytmikästä maalämpöpeliä. Nyt porataan!</p>
             <div class="game" id="game"></div>
                 <p>Helpon vaikeustason musiikki: Vicious Kevin MacLeod (incompetech.com) Licensed under Creative Commons: By Attribution 3.0 License http://creativecommons.org/licenses/by/3.0/<br><br>
 
